# architectures-protomodel

./: CMakeLists.txt  NOTICE
cmake/: ProtoModelConfigBuild.cmake.in  ProtoModelConfigInstall.cmake.in  config.cmake  dependencies.cmake  superbuild.cmake  utilities.cmake
src/: CMakeLists.txt
src/bind/: CMakeLists.txt  CommonDataModel.proto  GenerateBindings.cmake
src/cdm/: CMakeLists.txt  CommonDataModel.h
src/cdm/algorithms/: Algorithm.cpp  Algorithm.h
src/cdm/io/: CommonDataModelSerialization.cpp  CommonDataModelSerialization.h  SerializationUtils.cpp  SerializationUtils.h
src/cdm/objects/: Object1.cpp  Object1.h  Object2.cpp  Object2.h
src/driver/: CMakeLists.txt  Driver.cpp
